k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: eda-infra
---
apiVersion: v1
kind: Namespace
metadata:
    name: auth-service
---
apiVersion: v1
kind: Namespace
metadata:
    name: another-service
