k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: auth-allow-kafka
    namespace: auth-service
spec:
    podSelector:
        matchLabels:
            app: auth
    policyTypes:
        - Ingress
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        name: eda-infra
          ports:
              - protocol: TCP
                port: 9092
